Adjust max-height and remove max-width to allow img size to remain proportional in Firefox Fixes https://github.com/openshift/origin-web-catalog/issues/210

--- a/src/styles/projects-summary.less
+++ b/src/styles/projects-summary.less
@@ -122,8 +122,7 @@
           width: 60px;
         }
         img {
-          max-height: 30%;
-          max-width: 30%;
+          max-height: 17px;
         }
       }
       .services-item-name {
