--- a/src/styles/services-view.less
+++ b/src/styles/services-view.less
@@ -87,8 +87,7 @@
     position: relative;
 
     img {
-      max-height: 50px;
-      max-width: 50px;
+      max-height: 26px;
     }
   }
 
